@@ -146,7 +146,10 @@ Rd HELP FILE CHANGES
 
     o	An experimental tag \Sexpr has been added to Rd files, to
 	evaluate expressions at build, install, or render time.
-	(Currently render time evaluation is not supported.)
+	Currently install time and render time evaluation are
+	supported but not used in base or contributed packages unless
+	the environment variable USE_NEW_HELP is set during
+	installation.
 
     o	The parse_Rd() parser has been made more tolerant of coding
 	errors in Rd files:  now all syntax errors are reported as
